@@ -28,6 +28,8 @@
     * depend command: added a message at the end so we know output was created OK.
     * stage2svn command: added check to prevent adding files or folder with character ','.
     * Improved the unwtar command. Added --in option to allow to specify a file or folder that is not the current directory.
+    * Fixed the verify-index command to proparly handle Win/Mac/Common sources and to identify wtarred sources.
+    * Added --credentials to verify-index to allow access to secure s3.
 
 15/3/2015 0.10.0.4
     user visible changes, client:
